@@ -1,3 +1,7 @@
+2007-12-17  Andreas Kirschbaum
+
+	* Do not query metaserver too often.
+
 2007-12-16  Andreas Kirschbaum
 
 	* Add support for sound2 protocol command. Add sounds for player
